post-install/ks-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petasus-core
  namespace: kubesphere-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-set-headers: kubesphere-system/ak-proxy-headers
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 #   cert-manager.io/issuer: petasus-core-selfsigned
spec:
  ingressClassName: nginx-petasus-core
  tls:
    - secretName: petasus-core-tls
      hosts:
        - console.petasus.local
  rules:
    - host: console.petasus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ks-console        
                port:
                  number: 80
